--- a/ex01/docker-compose.yml
+++ b/ex01/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       POSTGRES_PASSWORD: expasswd
       POSTGRES_INITDB_ARGS: "--no-locale -E UTF-8"
       TZ: Asia/Tokyo
+    healthcheck:
+      test: "pg_isready || exit 1"
+      interval: 1s
+      timeout: 5s
+      retries: 10
   mysql:
     image: mysql:8.4
     container_name: mysqlquery
@@ -17,3 +22,8 @@ services:
       MYSQL_ROOT_PASSWORD: expasswd
       MYSQL_DATABASE: exdb
       TZ: Asia/Tokyo
+    healthcheck:
+      test: "mysqladmin ping || exit 1"
+      interval: 1s
+      timeout: 5s
+      retries: 50
