--- a/ex02/docker-compose.yml
+++ b/ex02/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       POSTGRES_PASSWORD: expasswd
       POSTGRES_INITDB_ARGS: "--no-locale -E UTF-8"
       TZ: Asia/Tokyo
+    healthcheck:
+      test: "pg_isready || exit 1"
+      interval: 1s
+      timeout: 5s
+      retries: 10
