--- a/ex03/docker-compose.yml
+++ b/ex03/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       MYSQL_DATABASE: stmtdb
       TZ: Asia/Tokyo
     healthcheck:
-      test: "MYSQL_PWD=expasswd mysql stmtdb -e 'SELECT 1' || exit 1"
+      test: "MYSQL_PWD=$$MYSQL_ROOT_PASSWORD mysql $$MYSQL_DATABASE -e 'SELECT 1' || exit 1"
       interval: 1s
       timeout: 5s
       retries: 50
